--- a/index.html
+++ b/index.html
@@ -11,8 +11,12 @@
 
 <body>
     <header>
-
+        <!-- Header -->
     </header>
+
+    <div class="main-container">
+        <!-- Main div -->
+    </div>
 </body>
 
 </html>
