--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
     <div class="main-container">
         <!-- Main div -->
     </div>
+
+    <div class="bottom-section">
+        <div class="mini-header">
+
+        </div>
+    </div>
 </body>
 
 </html>
