mini header bottom section

--- a/index.html
+++ b/index.html
@@ -19,10 +19,19 @@
     </div>
 
     <div class="bottom-section">
-        <div class="mini-header">
 
+        <div class="mini-header">
+            <!-- upper section -->
+        </div>
+        <div class="lower">
+            <!-- 3 colonne inferiori in float -->
+            <div></div>
+            <div></div>
+            <div></div>
         </div>
     </div>
+
+
 </body>
 
 </html>
