bottom section float

--- a/index.html
+++ b/index.html
@@ -23,13 +23,23 @@
         <div class="mini-header">
             <!-- upper section -->
         </div>
-        <div class="lower">
+
+
+        <!-- FLOAT SECTION CON 3 COLUMN -->
+        <div class="row clearfix">
+
             <!-- 3 colonne inferiori in float -->
-            <div></div>
-            <div></div>
-            <div></div>
+            <div class="side column float"></div>
+            <main class="column float"></main>
+            <div class="side column float"></div>
+
         </div>
     </div>
+
+    <footer>
+
+    </footer>
+
 
 
 </body>
