--- a/index.html
+++ b/index.html
@@ -10,17 +10,17 @@
 </head>
 
 <body>
-    <header>
+    <header class="round">
         <!-- Header -->
     </header>
 
-    <div class="main-container">
+    <div class="main-container round">
         <!-- Main div -->
     </div>
 
-    <div class="bottom-section">
+    <div class="bottom-section round">
 
-        <div class="mini-header">
+        <div class="mini-header round">
             <!-- upper section -->
         </div>
 
@@ -29,14 +29,14 @@
         <div class="row clearfix">
 
             <!-- 3 colonne inferiori in float -->
-            <div class="side column float"></div>
+            <div class="side column float round"></div>
             <main class="column float"></main>
-            <div class="side column float"></div>
+            <div class="side column float round"></div>
 
         </div>
     </div>
 
-    <footer>
+    <footer class="round">
 
     </footer>
 
