--- a/index.html
+++ b/index.html
@@ -29,11 +29,12 @@
         <div class="row clearfix">
 
             <!-- 3 colonne inferiori in float -->
-            <div class="side column float round"></div>
-            <main class="column float"></main>
-            <div class="side column float round"></div>
+            <div class="col round"></div>
+            <div class="col round"></div>
+            <div class="col round"></div>
 
         </div>
+
     </div>
 
     <footer class="round">
